// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can convert a blockquote 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is",
        },
      ],
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.BlockQuote",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "A quote.",
            },
          ],
          "text": "
    ",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a code block 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "text": "  this is a multiline
  code
  block.
",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a custom code block 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "info": "<video src=\\"https://www.youtube.com/embed/dQw4w9WgXcQ\\"/>",
      "text": "  this is a multiline
  code

  containing a newline

  which should be handled by the video plugin.
",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a link 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "http://clause.io",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "a link",
            },
          ],
          "text": "
    ",
          "title": "",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a multiline html block 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a custom",
        },
      ],
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.HtmlBlock",
      "text": "  <custom src=\\"property\\">
  contents
  </custom>",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "block.",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a single line html block 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.HtmlInline",
          "text": "<custom src=\\"property\\"/>",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " property.",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a thematic break 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is",
        },
      ],
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.ThematicBreak",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "A footer.",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert a video block 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading One",
        },
      ],
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.HtmlBlock",
      "text": "  <video src=\\"https://www.youtube.com/embed/dQw4w9WgXcQ\\"/>",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert an ordered list 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an ordered list:",
        },
      ],
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
              "text": "
      ",
            },
          ],
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
              "text": "
      ",
            },
          ],
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
              "text": "
      ",
            },
          ],
          "text": "
    ",
        },
      ],
      "start": "1",
      "text": "
  ",
      "tight": "true",
      "type": "ordered",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert an unordered list 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an unordered list:",
        },
      ],
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
              "text": "
      ",
            },
          ],
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
              "text": "
      ",
            },
          ],
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
              "text": "
      ",
            },
          ],
          "text": "
    ",
        },
      ],
      "text": "
  ",
      "tight": "true",
      "type": "bullet",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert basic text 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is some text.",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert bold italic text 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "some",
                },
              ],
              "text": "
      ",
            },
          ],
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " text.",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert bold text 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "some",
            },
          ],
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " text.",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert h1 to slate 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading One",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert h2 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Two",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert h3 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "3",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Three",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert h4 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "4",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Four",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert h5 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "5",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Five",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert h6 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "6",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Six",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert inline code 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "inline code",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert italic text 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "some",
            },
          ],
          "text": "
    ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " text.",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`can convert paragraphs 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is first paragraph.",
        },
      ],
      "text": "
  ",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is second paragraph.",
        },
      ],
      "text": "
  ",
    },
  ],
  "text": "
",
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;
